--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "social-help",
   "version": "0.1.0",
   "private": true,
+  "license": "ISC",
+  "engines": {
+    "node": "18.12.1"
+  },
   "dependencies": {
-    "@cyntler/react-doc-viewer": "^1.11.0",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,7 +14,6 @@
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.4.3",
     "web-vitals": "^2.1.4"
   },
