--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "ISC",
   "engines": {
-    "node": "18.12.1"
+    "node": "16.16.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
